--- a/style.css
+++ b/style.css
@@ -1,15 +1,45 @@
-h1{
-    color: green;
+*{
+    padding: 0;
+    margin: 0;
+    color: white;
 }
 
-p{
-    color: aqua;
+#navbar {
+    height: 60px;
+    background-color: #0f1111;
 }
-
 button{
-    color: blue;
+    background-color: #f08804;
 }
 
-body{
-    background-color:burlywood;
+#logo{
+    color: #f08804;
+    font-size: 25px;
+}
+
+a{
+    margin-right: 200px;
+    text-decoration: none;
+}
+
+.contentBox {
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    display: inline-block;
+}
+
+#content {
+    height: 800px;
+
+}
+.contentBox{
+    height: 100px;
+    width: 100px;
+}
+
+footer{
+    background-color: #0f1111;
+    color: white;
+    text-align: center;
 }
